@@ -1,3 +1,7 @@
+2003-08-12  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* pp/opreport.cpp: fix thinko when --merge=lib
+
 2003-08-12  John Levon  <levon@movementarian.org>
 
 	* pp/opreport.cpp: s/count_groups_summary/summary_container/g
